[package]
name = "improvmx-report"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Merritt <nathan@gnmerritt.net>"]

[dependencies]
chrono = { version = "^0.4.31", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "^0.11.22", features = ["json"] }
serde = "1"
serde_derive = "1"
mailgun_v3 = "0.14.0"